Fixed vertical spacing issues

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ a:hover { color:#FF7F00; border-bottom: 1px dashed #FF7F00; font-weight:bold; }
     float:left;
     color: black;
     background-color: white;
-    padding: 10px;
+    padding-left:10px;
     border: 3px solid #074688;
     border-radius: 7px;
     -moz-border-radius: 7px;
@@ -77,14 +77,12 @@ a:hover { color:#FF7F00; border-bottom: 1px dashed #FF7F00; font-weight:bold; }
 #content a:hover { color:#FF9B06; border-bottom: 1px dashed #FF7F00; font-weight:bold; }
 
 .entry {
-    line-height: 1.5em;
+    line-height: 2.5em;
     padding-bottom:20px;
 }
 
 .message {
     font-size: 16px;
-    margin-top: 15px;
-    color: black;
 }
 
 .message h3 {
@@ -92,27 +90,28 @@ a:hover { color:#FF7F00; border-bottom: 1px dashed #FF7F00; font-weight:bold; }
 }
 
 .message p{
-    padding-bottom: 10px;
     padding-left: 15px;
-    text-indent: 15px;
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
 
 .message ul {
     padding-left: 45px;
-    padding-bottom: 10px;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 .message dl {
    width: 100%;
    overflow: hidden;
-   margin-left: 25px;
+   margin-left: 10px;
 }
 
 .message dl dt{
    font-style: italic;
    float: left;
    clear: left;
-   width: 33%;
+   width: 200px;
    padding-bottom: 10px;
 }
 
